--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -10,20 +10,19 @@
     <div class="container">
         <h2>Les derniers biens </h2>
         <div class="row flex">
-
+            {% for property in properties %}
                 <div class="col-3">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">
-                                <a href="/"></a>
+                                <a href="{{ path('app_property.show', {id: property.id}) }}">{{ property.title }}</a>
                             </h5>
-                            <p class="card-text"></p>
-                            <div class="text-primary"> €</div>
+                            <p class="card-text">{{ property.city }} ({{ property.postalCode }})</p>
+                            <div class="text-primary" style="font-weight: bold;font-size: 2rem">{{ property.formattedPrice}} €</div>
                         </div>
                     </div>
                 </div>
-
-
+            {% endfor %}
         </div>
     </div>
 {%  endblock %}
