--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title 'Agence lorem ipsum'%}
 {% block body %}
-    <div class="jumbotron text-center">
+    <div class="p-5 mb-4 bg-light rounded-3 text-center">
         <div class="container">
             <h1 class="my-4">Agence lorem ipsum</h1>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consequatur consequuntur, cumque dolorum fuga impedit ipsum maxime mollitia odio qui quia quos ratione repellendus reprehenderit soluta sunt ut voluptatem voluptatibus.</p>
