--- a/templates/admin/property/index.html.twig
+++ b/templates/admin/property/index.html.twig
@@ -1,26 +1,44 @@
 {% extends 'base.html.twig' %}
 {% block title 'Admin - Agence lorem ipsum'%}
 {% block body %}
-<div class="container mt-4">
-    <h1>Gérer les biens</h1>
+    <div class="container mt-4">
+        <h1>Gérer les biens</h1>
 
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Titre</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for property in properties %}
-        <tr>
-            <td>{{ property.title }}</td>
-            <td><a href="{{ path('app_admin.property.edit',{id:property.id}) }}"class="btn btn-secondary">Editer</a></td>
-        </tr>
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+
         {% endfor %}
-        </tbody>
-    </table>
-</div>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>Titre</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for property in properties %}
+                <tr>
+                    <td>{{ property.title }}</td>
+                    <td>
+                        <a href="{{ path('app_admin.property.edit',{id:property.id}) }}"class="btn btn-secondary">Editer</a>
+                        <form action="{{ path('app_admin.property.delete',{id:property.id}) }}" method="post"
+                              style="display: inline-block" onsubmit="return confirm('Etes vous vraiment sûr de supprimer ce bien ? ')">
+                            <input type="hidden" name="_method" value="DELETE" />
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ property.id) }}">
+                            <button class="btn btn-danger">Supprimer</button>
+                        </form>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+        <div class="text-end">
+            <a href="{{ path('app_admin.property.new') }}" class="btn btn-primary">Créer un nouveau bien</a>
+        </div>
+    </div>
 
 
 {%  endblock %}
