--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,13 @@
                     <a class="nav-link {% if current_menu is defined and current_menu =='properties' %} active {% endif %}" aria-current="page" href="{{ path('app_property.index')}}">Acheter</a>
                 </li>
             </ul>
+            {% if app.user %}
+                <ul class="navbar-nav mb-lg-0">
+                    <li class="nav-item">
+                        <a href="{{ path('logout') }}" class="nav-link">Déconnexion</a>
+                    </li>
+                </ul>
+            {% endif %}
         </div>
     </div>
 </nav>
