--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,10 +2,16 @@
 {% block title 'Se connecter'%}
 {% block body %}
    <div class="container my-5">
+
+       {% if error %}
+       <div class="alert alert-danger">
+           <p>{{ error.messageKey | trans(error.messagedata,'security') }}</p>
+       </div>
+       {% endif %}
        <form action="{{ path('app_login' )}}" method="post">
            <div class="form-group my-3">
                <label for="username">Nom d'utilisateur</label>
-               <input type="text" id="username" name="_username" class="form-control">
+               <input type="text" id="username" name="_username" class="form-control" value="{{ last_username }}">
            </div>
            <div class="form-group my-3">
                <label for="password">Mot de passe</label>
