--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -1,7 +1,17 @@
 {% extends 'base.html.twig' %}
 {% block title 'Nos biens immobilier' %}
 {% block body %}
-    <div class="jumbotron text-center">
+    <div class="jumbotron text-center my-4  " >
+        <div class="container ">
+            {{ form_start(form) }}
+            <div class="form-row d-flex justify-content-center">
+                <div class="col-3 mx-2" >{{ form_row(form.maxPrice) }}</div>
+                <div class="col-3 mx-2" >{{ form_row(form.minSurface) }}</div>
+                <div class="col-1 "><button class="btn btn-primary" >Rechercher</button></div>
+            </div>
+            {{ form_end(form) }}
+        </div>
+    </div>
         <div class="container">
             <h1 class="my-4">Voir tous nos biens</h1>
             <div class="row">
@@ -15,5 +25,5 @@
                 {{ knp_pagination_render(properties) }}
             </div>
         </div>
-    </div>
+
 {%  endblock %}
