--- a/templates/admin/option/edit.html.twig
+++ b/templates/admin/option/edit.html.twig
@@ -2,8 +2,9 @@
 {% block title 'Admin-edit'%}
 {% block body %}
     <div class="container mt-4">
-      <h1>Editer le bien </h1>
-        {{  include('admin/property/_form.html.twig', {form: form, button:'Editer'}) }}
+      <h1>Editer l'option </h1>
+        {{  include('admin/option/_form.html.twig', {form: form, button:'Editer'}) }}
     </div>
+
 
 {%  endblock %}
