--- a/templates/admin/property/new.html.twig
+++ b/templates/admin/property/new.html.twig
@@ -8,3 +8,15 @@
 
 
 {%  endblock %}
+
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tom-select@2.0.0/dist/css/tom-select.css">
+{% endblock %}
+
+{% block javascripts %}
+    <script src="https://cdn.jsdelivr.net/npm/tom-select@2.0.0/dist/js/tom-select.complete.min.js"></script>
+    <script defer>
+        new TomSelect(".form-select", {});
+    </script>
+{% endblock %}
