--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -7,6 +7,7 @@
             <div class="form-row d-flex justify-content-center">
                 <div class="col-3 mx-2" >{{ form_row(form.maxPrice) }}</div>
                 <div class="col-3 mx-2" >{{ form_row(form.minSurface) }}</div>
+                <div class="col-2 mx-2">{{ form_row(form.options) }}</div>
                 <div class="col-1 "><button class="btn btn-primary" >Rechercher</button></div>
             </div>
             {{ form_end(form) }}
