--- a/templates/admin/property/_form.html.twig
+++ b/templates/admin/property/_form.html.twig
@@ -1,8 +1,9 @@
 {{ form_start(form) }}
 <div class="row align-items-center">
-    <div class="col-md-4">{{ form_row(form.title) }}</div>
-    <div class="col-md-4">{{ form_row(form.surface) }}</div>
-    <div class="col-md-4">{{ form_row(form.price) }}</div>
+    <div class="col-md-3">{{ form_row(form.title) }}</div>
+    <div class="col-md-2">{{ form_row(form.surface) }}</div>
+    <div class="col-md-3">{{ form_row(form.price) }}</div>
+    <div class="col-md-4">{{ form_row(form.imageFile) }}</div>
 </div>
 <div class="row align-items-center">
     <div class="col-md-2">{{ form_row(form.rooms) }}</div>
