--- a/templates/property/_property.html.twig
+++ b/templates/property/_property.html.twig
@@ -1,4 +1,9 @@
 <div class="card mb-4">
+    {% if property.filename %}
+        <img src="{{ vich_uploader_asset(property,'imageFile') | imagine_filter('thumb') }}" alt="" class="card-img-top">
+     {% else%}
+         <img src="{{ 'images/properties/empty.png' | imagine_filter('thumb') }}" alt="" class="card-img-top">
+    {% endif %}
     <div class="card-body">
         <h5 class="card-title">
             <a href="{{ path('app_property.show', {id: property.id}) }}">{{ property.title }}</a>
